kubernetes/apps/network/proxy/plex/service.yaml
---
# yaml-language-server: $schema=https://github.com/instrumenta/kubernetes-json-schema/raw/refs/heads/master/v1.18.1/service-v1.json
apiVersion: v1
kind: Service
metadata:
  name: &name proxy-plex
  labels:
    app: *name
spec:
  ports:
    - port: 80
      targetPort: 32400
      protocol: TCP
  selector: {} # No pods
---
# yaml-language-server: $schema=https://github.com/instrumenta/kubernetes-json-schema/raw/refs/heads/master/v1.18.1/endpoints-v1.json
apiVersion: v1
kind: Endpoints
metadata:
  name: proxy-plex
subsets:
  - addresses:
      - ip: "${PLEX_IP}"
    ports:
      - port: 32400
        protocol: TCP
